--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,16 @@
             android:name="ru.egoncharovsky.words.ui.slideshow.SlideshowFragment"
             android:label="@string/menu_slideshow"
             tools:layout="@layout/fragment_slideshow"/>
+
+    <fragment
+            android:id="@+id/nav_quiz_multi_choice"
+            android:name="ru.egoncharovsky.words.ui.quiz.MultiChoiceFragment"
+            android:label="@string/quiz"
+            tools:layout="@layout/fragment_quiz_multiple_choice"/>
+
+    <fragment
+            android:id="@+id/nav_quiz_answer"
+            android:name="ru.egoncharovsky.words.ui.quiz.AnswerFragment"
+            android:label="@string/quiz"
+            tools:layout="@layout/fragment_quiz_multiple_choice"/>
 </navigation>
