multi choice: added 5th button; fixate top margin for quiz

--- a/app/src/main/res/layout/fragment_quiz_answer.xml
+++ b/app/src/main/res/layout/fragment_quiz_answer.xml
@@ -44,11 +44,11 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:id="@+id/tableLayout"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginTop="250dp">
 
         <EditText
                 android:layout_width="0dp"
