--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,5 +28,9 @@
         <item
                 android:id="@+id/nav_quiz"
                 android:title="Quiz"/>
+
+        <item
+                android:id="@+id/nav_quiz_meaning"
+                android:title="Meaning"/>
     </group>
 </menu>
