--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,5 +32,10 @@
         <item
                 android:id="@+id/nav_quiz_meaning"
                 android:title="Meaning"/>
+
+        <item
+                android:id="@+id/nav_quiz_remember"
+                android:title="Remember"/>
+
     </group>
 </menu>
