--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,5 +37,9 @@
                 android:id="@+id/nav_quiz_remember"
                 android:title="Remember"/>
 
+        <item
+                android:id="@+id/nav_dictionary"
+                android:title="Dictionary"/>
+
     </group>
 </menu>
