--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -55,6 +55,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:textSize="30sp"
+            android:visibility="invisible"
             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
