--- a/app/src/main/res/layout/fragment_quiz_answer.xml
+++ b/app/src/main/res/layout/fragment_quiz_answer.xml
@@ -71,7 +71,7 @@
                 android:text="Answer"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:id="@+id/button"
+                android:id="@+id/quiz_answer_send"
                 app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
