--- a/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
@@ -54,7 +54,7 @@
                 android:text="Choice 1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/multiChoiceButton1"
+                android:id="@+id/quiz_multiChoiceButton1"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -63,7 +63,7 @@
                 android:text="Choice 2"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/multiChoiceButton2"
+                android:id="@+id/quiz_multiChoiceButton2"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -72,7 +72,7 @@
                 android:text="Choice 3"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/multiChoiceButton3"
+                android:id="@+id/quiz_multiChoiceButton3"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -81,7 +81,7 @@
                 android:text="Choice 4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/multiChoiceButton4"
+                android:id="@+id/quiz_multiChoiceButton4"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -90,7 +90,7 @@
                 android:text="Choice 5"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/multiChoiceButton5"
+                android:id="@+id/quiz_multiChoiceButton5"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
