--- a/app/src/main/res/layout/fragment_quiz_remember.xml
+++ b/app/src/main/res/layout/fragment_quiz_remember.xml
@@ -53,7 +53,7 @@
                 android:text="No"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button5"
+                android:id="@+id/quiz_remember_no"
                 android:layout_weight="0.8"
                 android:textSize="30sp"/>
 
@@ -61,7 +61,7 @@
                 android:text="Maybe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button4"
+                android:id="@+id/quiz_remember_maybe"
                 android:layout_weight="1"
                 android:textSize="30sp"/>
 
@@ -69,7 +69,7 @@
                 android:text="Yes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button3"
+                android:id="@+id/quiz_remember_yes"
                 android:layout_weight="0.8"
                 android:textSize="30sp"/>
     </LinearLayout>
