--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             android:id="@+id/quiz_replacement"
-            app:layout_constraintBottom_toTopOf="@+id/quiz_next">
+            app:layout_constraintBottom_toTopOf="@+id/nextButton">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -46,7 +46,7 @@
             android:text="Next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/quiz_next"
+            android:id="@+id/nextButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
