--- a/app/src/main/res/layout/fragment_quiz_answer.xml
+++ b/app/src/main/res/layout/fragment_quiz_answer.xml
@@ -24,7 +24,6 @@
                 android:text="Write translation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView4"
                 android:textAlignment="center"
                 android:textSize="24sp"/>
 
@@ -32,7 +31,7 @@
                 android:text="@string/word"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/textView5"
+                android:id="@+id/word"
                 android:gravity="center"
                 android:textSize="36sp"/>
     </LinearLayout>
@@ -55,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textShortMessage"
                 android:ems="10"
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/answerText"
                 android:hint="Translation..."
                 android:textAlignment="center"
                 android:textSize="24sp"
@@ -71,11 +70,11 @@
                 android:text="Answer"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:id="@+id/quiz_answer_send"
-                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
+                android:id="@+id/sendAnswer"
+                app:layout_constraintStart_toStartOf="@+id/answerText"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
+                app:layout_constraintTop_toBottomOf="@+id/answerText"
+                app:layout_constraintEnd_toEndOf="@+id/answerText"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textSize="18sp"/>
