--- a/app/src/main/res/layout/fragment_quiz_meaning.xml
+++ b/app/src/main/res/layout/fragment_quiz_meaning.xml
@@ -24,7 +24,7 @@
                 android:text="Word"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView2"
+                android:id="@+id/wordValue"
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:layout_marginVertical="30dp"/>
@@ -33,7 +33,7 @@
                 android:text="Translation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView7"
+                android:id="@+id/wordTranslation"
                 android:textSize="30sp"
                 android:textAlignment="center"
                 android:layout_marginVertical="30dp"/>
