--- a/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
@@ -32,7 +32,7 @@
                 android:text="@string/word"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/textView5"
+                android:id="@+id/wordValue"
                 android:gravity="center"
                 android:textSize="36sp"/>
     </LinearLayout>
@@ -54,7 +54,7 @@
                 android:text="Choice 1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/quiz_multiChoiceButton1"
+                android:id="@+id/option1"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -63,7 +63,7 @@
                 android:text="Choice 2"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/quiz_multiChoiceButton2"
+                android:id="@+id/option2"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -72,7 +72,7 @@
                 android:text="Choice 3"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/quiz_multiChoiceButton3"
+                android:id="@+id/option3"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -81,7 +81,7 @@
                 android:text="Choice 4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/quiz_multiChoiceButton4"
+                android:id="@+id/option4"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
@@ -90,7 +90,7 @@
                 android:text="Choice 5"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/quiz_multiChoiceButton5"
+                android:id="@+id/option5"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
                 android:textSize="24sp"/>
