--- a/app/src/main/res/layout/fragment_quiz_remember.xml
+++ b/app/src/main/res/layout/fragment_quiz_remember.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.quiz.RememberViewModel">
+        tools:context=".ui.quiz.RememberFragment">
 
     <LinearLayout
             android:orientation="vertical"
@@ -32,7 +32,7 @@
                 android:text="@string/word"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/textView5"
+                android:id="@+id/wordValue"
                 android:gravity="center"
                 android:textSize="36sp"
                 android:layout_marginVertical="30dp"/>
@@ -53,7 +53,7 @@
                 android:text="No"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/quiz_remember_no"
+                android:id="@+id/no"
                 android:layout_weight="0.8"
                 android:textSize="30sp"/>
 
@@ -61,7 +61,7 @@
                 android:text="Maybe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/quiz_remember_maybe"
+                android:id="@+id/maybe"
                 android:layout_weight="1"
                 android:textSize="30sp"/>
 
@@ -69,7 +69,7 @@
                 android:text="Yes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/quiz_remember_yes"
+                android:id="@+id/yes"
                 android:layout_weight="0.8"
                 android:textSize="30sp"/>
     </LinearLayout>
