--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -15,13 +15,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:progress="33"
-            android:indeterminate="false"/>
+            android:progress="0"
+            android:indeterminate="false"
+            android:min="0"
+            android:max="100"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:id="@+id/progressIndicator"
+            android:id="@+id/timeIndicator"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp"
