--- a/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
@@ -57,6 +57,7 @@
                 android:id="@+id/option1"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
+                android:enabled="false"
                 android:textSize="24sp"/>
 
         <Button
@@ -66,6 +67,7 @@
                 android:id="@+id/option2"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
+                android:enabled="false"
                 android:textSize="24sp"/>
 
         <Button
@@ -75,6 +77,7 @@
                 android:id="@+id/option3"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
+                android:enabled="false"
                 android:textSize="24sp"/>
 
         <Button
@@ -84,6 +87,7 @@
                 android:id="@+id/option4"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
+                android:enabled="false"
                 android:textSize="24sp"/>
 
         <Button
@@ -93,9 +97,27 @@
                 android:id="@+id/option5"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
+                android:enabled="false"
                 android:textSize="24sp"/>
 
     </LinearLayout>
+
+    <TextView
+            android:text="Right answer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/answerResult"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="36sp"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+            android:layout_marginTop="16dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
