--- a/app/src/main/res/layout/fragment_quiz_remember_right.xml
+++ b/app/src/main/res/layout/fragment_quiz_remember_right.xml
@@ -64,7 +64,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/no"
                 android:layout_weight="0.8"
-                android:textSize="30sp"/>
+                android:textSize="30sp"
+                android:enabled="false"/>
 
         <Button
                 android:text="Yes"
@@ -72,7 +73,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/yes"
                 android:layout_weight="0.8"
-                android:textSize="30sp"/>
+                android:textSize="30sp"
+                android:enabled="false"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
