--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorCorrectLight">#BE4CAF50</color>
+    <color name="colorCorrect">#4CAF50</color>
+    <color name="colorIncorrectLight">#8BE91E1E</color>
 </resources>
