--- a/app/src/main/res/layout/fragment_quiz_meaning.xml
+++ b/app/src/main/res/layout/fragment_quiz_meaning.xml
@@ -21,7 +21,7 @@
             android:layout_marginStart="16dp">
 
         <TextView
-                android:text="Word"
+                android:text="@string/word"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/wordValue"
@@ -30,7 +30,7 @@
                 android:layout_marginVertical="30dp"/>
 
         <TextView
-                android:text="Translation"
+                android:text="@string/translation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/wordTranslation"
