--- a/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_quiz_multiple_choice.xml
@@ -51,7 +51,7 @@
             android:layout_marginTop="250dp">
 
         <Button
-                android:text="Choice 1"
+                android:text="@string/choice1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/option1"
@@ -61,7 +61,7 @@
                 android:textSize="24sp"/>
 
         <Button
-                android:text="Choice 2"
+                android:text="@string/choice2"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/option2"
@@ -71,7 +71,7 @@
                 android:textSize="24sp"/>
 
         <Button
-                android:text="Choice 3"
+                android:text="@string/choice3"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/option3"
@@ -81,7 +81,7 @@
                 android:textSize="24sp"/>
 
         <Button
-                android:text="Choice 4"
+                android:text="@string/choice4"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/option4"
@@ -91,7 +91,7 @@
                 android:textSize="24sp"/>
 
         <Button
-                android:text="Choice 5"
+                android:text="@string/choice5"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/option5"
@@ -103,7 +103,7 @@
     </LinearLayout>
 
     <TextView
-            android:text="Right answer"
+            android:text="@string/text_placeholder"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:id="@+id/answerResult"
@@ -117,7 +117,8 @@
             android:textSize="36sp"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:visibility="invisible"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
