--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
         <item
                 android:id="@+id/nav_dictionary"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/dictionary"/>
+                android:title="@string/my_dictionary"/>
 
     </group>
 </menu>
