--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -56,6 +56,6 @@
     <fragment
             android:id="@+id/nav_dictionary"
             android:name="ru.egoncharovsky.words.ui.dictionary.DictionaryFragment"
-            android:label="@string/dictionary"
+            android:label="@string/my_dictionary"
             tools:layout="@layout/fragment_dictionary"/>
 </navigation>
