--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -51,15 +51,12 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             android:layout_marginTop="8dp">
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/dictionary_list"
-                android:layout_marginEnd="8dp">
-
-            <include layout="@layout/fragment_dictionary_item"/>
-
-        </LinearLayout>
+                android:id="@+id/dictionaryList"
+                tools:listitem="@layout/fragment_dictionary_item"
+                />
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
