--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -23,7 +23,7 @@
                 android:src="@android:drawable/ic_menu_sort_by_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
+                android:id="@+id/sortButton"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton"
+                app:layout_constraintEnd_toStartOf="@+id/sortButton"
+                android:id="@+id/search"
                 android:layout_marginEnd="2dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -55,8 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/dictionaryList"
-                tools:listitem="@layout/fragment_dictionary_item"
-                />
+                tools:listitem="@layout/fragment_dictionary_item"/>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
