--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
             android:name="ru.egoncharovsky.words.ui.dictionary.DictionaryFragment"
             android:label="@string/my_dictionary"
             tools:layout="@layout/fragment_dictionary"/>
+
+    <fragment
+            android:id="@+id/nav_word_lists"
+            android:name="ru.egoncharovsky.words.ui.wordlist.WordListsFragment"
+            android:label="@string/my_word_lists"
+            tools:layout="@layout/fragment_word_lists"/>
 </navigation>
