list edit fragment

--- a/app/src/main/res/layout/fragment_word_lists.xml
+++ b/app/src/main/res/layout/fragment_word_lists.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.wordlist.WordListsFragment">
+        tools:context=".ui.wordlist.WordListsFragment"
+        android:id="@+id/fragment_word_lists">
 
     <ScrollView
             android:layout_width="0dp"
@@ -26,5 +27,15 @@
                 tools:listitem="@layout/fragment_word_lists_item"/>
 
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@android:drawable/ic_menu_save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
