--- a/app/src/main/res/layout/fragment_word_list_edit.xml
+++ b/app/src/main/res/layout/fragment_word_list_edit.xml
@@ -47,7 +47,7 @@
                     android:text="@string/choose_hint"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/button"
+                    android:id="@+id/choose"
                     android:layout_weight="0.3"
                     android:textSize="14sp"/>
         </LinearLayout>
