--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="maybe">#A6FFC107</color>
     <color name="yes">#A64CAF50</color>
 
+    <color name="itemSelected">#80C8C8C8</color>
 
 </resources>
