--- a/app/src/main/res/layout/fragment_study_list_edit.xml
+++ b/app/src/main/res/layout/fragment_study_list_edit.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.wordlist.WordListEditFragment">
+        tools:context=".ui.wordlist.StudyListEditFragment">
 
 
     <LinearLayout
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/words"
-                    tools:listitem="@layout/fragment_word_list_item"/>
+                    tools:listitem="@layout/fragment_study_list_item"/>
 
         </ScrollView>
     </LinearLayout>
