--- a/app/src/main/res/layout/fragment_study_lists.xml
+++ b/app/src/main/res/layout/fragment_study_lists.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.wordlist.WordListsFragment"
+        tools:context=".ui.wordlist.StudyListsFragment"
         android:id="@+id/fragment_word_lists">
 
     <ScrollView
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/wordLists"
-                tools:listitem="@layout/fragment_word_lists_item"/>
+                tools:listitem="@layout/fragment_study_lists_item"/>
 
     </ScrollView>
 
